# craft-memory

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_PLAN.md  README.md  SECURITY.md  analysis-report-2026-05-02.md  pyproject.toml  release-please-config.json  roadmap.md  start-http.bat  start-memory.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  publish.yml  test.yml
Craft-Memory-UI/: ARCHITECTURE.md  Craft Memory.html  DEBUG_PLAN.md  README.md  cache-bust.js  index.html
Craft-Memory-UI/src/: api.jsx  app.jsx  config.jsx  data.jsx  icons.jsx  logo.jsx
craft-agents/: README.md  automations.json
craft-agents/source/: config.json  guide.md
docs/: analisi_finale_craft_memory.md  graphify_analisi_approfondita.md  skill_inventory.xlsx  skill_inventory_v2.xlsx  skills_catalogo_ragionato.md  todo_gap_2026-05-01.md  todo_sources_2026-05-01.md  ~$skill_inventory.xlsx
docs/adr/: ADR-001-http-transport.md  (+8 more)
scripts/: ensure-running.py  install-memory-system.sh  session-scanner.py
src/: db.py  schema.sql  server.py
tests/: conftest.py  constants.py  test_auto_link.py  test_batch_remember.py  test_consolidate_memories.py  test_db.py  test_exposed_tools.py  test_graph.py  test_graph_context.py  test_observability.py  test_policy.py  test_procedure_outcomes.py  test_procedures.py  test_scopes.py  test_server.py  test_session_quality.py  test_temporal.py  test_top_procedures.py
(+35 files in other folders)
